whoami/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: whoami-ingress-staging
 namespace: whoami
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
   - hosts:
       - who.wgbh-mla.org
     secretName: whoami-tls-staging
  rules:
   - host: who.wgbh-mla.org
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: whoami
               port:
                 name: web
