whoami/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  routes:
    - kind: Rule
      match: Host(`w.wgbh-mla.org`)
      services:
        - kind: Service
          name: whoami
          port: 80
  tls:
    secretName: tls-whoami-production
