whoami/whoami.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: whoami-ingress
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: whoami
#             port:
#               name: web
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.wgbh-mla.org`)
      services:
        - kind: Service
          name: whoami
          port: 80
